identifying missing valus.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7b14672e",
    "metadata": {},
    "outputs": [],
@@ -15,6 +15,441 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0cd544bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_risk_dataset = pd.read_csv(\n",
+    "    filepath_or_buffer = \"../data/interim/credit_risk_dataset_prepped.csv\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c0ac082",
+   "metadata": {},
+   "source": [
+    "### Missing Values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36826e9e",
+   "metadata": {},
+   "source": [
+    "#### Re-Identifying Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6a9ffd91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0                       0\n",
+       "person_age                       0\n",
+       "person_income                    0\n",
+       "person_home_ownership            0\n",
+       "person_emp_length              887\n",
+       "loan_intent                      0\n",
+       "loan_grade                       0\n",
+       "loan_amnt                        0\n",
+       "loan_int_rate                 3094\n",
+       "loan_status                      0\n",
+       "loan_percent_income              0\n",
+       "cb_person_default_on_file        0\n",
+       "cb_person_cred_hist_length       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e3665d35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0                    0.000000\n",
+       "person_age                    0.000000\n",
+       "person_income                 0.000000\n",
+       "person_home_ownership         0.000000\n",
+       "person_emp_length             0.027369\n",
+       "loan_intent                   0.000000\n",
+       "loan_grade                    0.000000\n",
+       "loan_amnt                     0.000000\n",
+       "loan_int_rate                 0.095467\n",
+       "loan_status                   0.000000\n",
+       "loan_percent_income           0.000000\n",
+       "cb_person_default_on_file     0.000000\n",
+       "cb_person_cred_hist_length    0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.isna().sum()/len(credit_risk_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbe90269",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.isna().all(axis=1).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1eea013a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.isna().all(axis=0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "094b6980",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>person_age</th>\n",
+       "      <th>person_income</th>\n",
+       "      <th>person_home_ownership</th>\n",
+       "      <th>person_emp_length</th>\n",
+       "      <th>loan_intent</th>\n",
+       "      <th>loan_grade</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>loan_int_rate</th>\n",
+       "      <th>loan_status</th>\n",
+       "      <th>loan_percent_income</th>\n",
+       "      <th>cb_person_default_on_file</th>\n",
+       "      <th>cb_person_cred_hist_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>39</td>\n",
+       "      <td>23</td>\n",
+       "      <td>71500</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>DEBTCONSOLIDATION</td>\n",
+       "      <td>D</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>50</td>\n",
+       "      <td>24</td>\n",
+       "      <td>78000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>DEBTCONSOLIDATION</td>\n",
+       "      <td>D</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>57</td>\n",
+       "      <td>23</td>\n",
+       "      <td>277000</td>\n",
+       "      <td>OWN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>A</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>59</td>\n",
+       "      <td>24</td>\n",
+       "      <td>12000</td>\n",
+       "      <td>OWN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>VENTURE</td>\n",
+       "      <td>E</td>\n",
+       "      <td>1750</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>62</td>\n",
+       "      <td>26</td>\n",
+       "      <td>263000</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>B</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32375</th>\n",
+       "      <td>32547</td>\n",
+       "      <td>53</td>\n",
+       "      <td>4888</td>\n",
+       "      <td>OWN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>VENTURE</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1400</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>True</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32380</th>\n",
+       "      <td>32552</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45900</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>C</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>True</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32381</th>\n",
+       "      <td>32553</td>\n",
+       "      <td>54</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>C</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>False</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32397</th>\n",
+       "      <td>32569</td>\n",
+       "      <td>51</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>A</td>\n",
+       "      <td>7500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>False</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32398</th>\n",
+       "      <td>32570</td>\n",
+       "      <td>58</td>\n",
+       "      <td>72000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>HOMEIMPROVEMENT</td>\n",
+       "      <td>B</td>\n",
+       "      <td>4500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>False</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3914 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Unnamed: 0  person_age  person_income person_home_ownership  \\\n",
+       "38             39          23          71500                  RENT   \n",
+       "49             50          24          78000                  RENT   \n",
+       "56             57          23         277000                   OWN   \n",
+       "58             59          24          12000                   OWN   \n",
+       "61             62          26         263000              MORTGAGE   \n",
+       "...           ...         ...            ...                   ...   \n",
+       "32375       32547          53           4888                   OWN   \n",
+       "32380       32552          65          45900                  RENT   \n",
+       "32381       32553          54          20000                  RENT   \n",
+       "32397       32569          51          60000              MORTGAGE   \n",
+       "32398       32570          58          72000                  RENT   \n",
+       "\n",
+       "       person_emp_length        loan_intent loan_grade  loan_amnt  \\\n",
+       "38                   3.0  DEBTCONSOLIDATION          D      30000   \n",
+       "49                   4.0  DEBTCONSOLIDATION          D      30000   \n",
+       "56                   3.0           PERSONAL          A      35000   \n",
+       "58                   2.0            VENTURE          E       1750   \n",
+       "61                   0.0          EDUCATION          B      10000   \n",
+       "...                  ...                ...        ...        ...   \n",
+       "32375                0.0            VENTURE          C       1400   \n",
+       "32380                2.0          EDUCATION          C      10000   \n",
+       "32381                2.0            MEDICAL          C       5000   \n",
+       "32397                1.0           PERSONAL          A       7500   \n",
+       "32398                5.0    HOMEIMPROVEMENT          B       4500   \n",
+       "\n",
+       "       loan_int_rate  loan_status  loan_percent_income  \\\n",
+       "38               NaN         True                 0.42   \n",
+       "49               NaN         True                 0.38   \n",
+       "56               NaN        False                 0.13   \n",
+       "58               NaN        False                 0.15   \n",
+       "61               NaN         True                 0.04   \n",
+       "...              ...          ...                  ...   \n",
+       "32375            NaN         True                 0.29   \n",
+       "32380            NaN        False                 0.22   \n",
+       "32381            NaN        False                 0.25   \n",
+       "32397            NaN        False                 0.13   \n",
+       "32398            NaN        False                 0.06   \n",
+       "\n",
+       "       cb_person_default_on_file  cb_person_cred_hist_length  \n",
+       "38                         False                           4  \n",
+       "49                          True                           4  \n",
+       "56                         False                           4  \n",
+       "58                          True                           3  \n",
+       "61                         False                           4  \n",
+       "...                          ...                         ...  \n",
+       "32375                       True                          28  \n",
+       "32380                       True                          19  \n",
+       "32381                      False                          28  \n",
+       "32397                      False                          23  \n",
+       "32398                      False                          23  \n",
+       "\n",
+       "[3914 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset[credit_risk_dataset.isna().any(axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce57983e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -24,7 +459,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.14"
   }
  },
