updated the names of variables for get_patterns function from pyamputate function.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -480,27 +480,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "55a58857",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nan_dataset = credit_risk_dataset.loc[credit_risk_dataset.isna().any(axis=1), [\"person_emp_length\", \"loan_int_rate\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "id": "71e1f0d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nan2_dataset = credit_risk_dataset[[\"person_emp_length\", \"loan_int_rate\"]]"
+    "nan_dataset = credit_risk_dataset[[\"person_emp_length\", \"loan_int_rate\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "id": "71055147",
    "metadata": {},
    "outputs": [
@@ -525,8 +515,16 @@
    ],
    "source": [
     "mdp = mdPatterns()\n",
-    "patterns = mdp.get_patterns(nan2_dataset)"
+    "patterns = mdp.get_patterns(nan_dataset)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5955048f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
