--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "7b14672e",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,8 @@
     "# visualization\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from pyampute.exploration.md_patterns import mdPatterns"
+    "from pyampute.exploration.md_patterns import mdPatterns\n",
+    "from pyampute.exploration.mcar_statistical_tests import MCARTest"
    ]
   },
   {
@@ -447,14 +448,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "094b6980",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "db11bfcf",
    "metadata": {},
@@ -516,6 +509,14 @@
    "source": [
     "mdp = mdPatterns()\n",
     "patterns = mdp.get_patterns(nan_dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5c0b90d",
+   "metadata": {},
+   "source": [
+    "#### MCAR Testing"
    ]
   },
   {
