created is null column for person emp length variable for MAR visualizatoin comparisons to other variables.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -586,13 +586,31 @@
    "id": "f2671673",
    "metadata": {},
    "source": [
-    "##### Reject the Null Hypothesis - The test determined the data is not MCAR"
+    "##### Reject the Null Hypothesis - The test determined the data is not MCAR; Its either MAR or MNAR."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37495775",
+   "metadata": {},
+   "source": [
+    "### MAR Identification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "3d089646",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_risk_dataset['LIR_Missing'] = credit_risk_dataset['person_emp_length'].isnull()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e10b4293",
+   "id": "b60f7784",
    "metadata": {},
    "outputs": [],
    "source": []
