changed binary column to PEL_missing

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -599,12 +599,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "3d089646",
    "metadata": {},
    "outputs": [],
    "source": [
-    "credit_risk_dataset['LIR_Missing'] = credit_risk_dataset['person_emp_length'].isnull()"
+    "credit_risk_dataset['PEL_Missing'] = credit_risk_dataset['person_emp_length'].isnull()"
    ]
   },
   {
