added my markdown comment snyopsis of the visualizations.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -1066,6 +1066,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c30244bc",
+   "metadata": {},
+   "source": [
+    "#### The distributions appear to be similar, which would indicate that MAR is not at play; therefore MNAR is the probable cause for missing data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ff821820",
