moved handling duplicated values from eda workbook to preprocessing workbook.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 91,
    "id": "7b14672e",
    "metadata": {},
    "outputs": [],
@@ -19,6 +19,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "318413f7",
+   "metadata": {},
+   "source": [
+    "### Identify/Handle Duplicted Values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
    "id": "0cd544bc",
@@ -28,6 +36,59 @@
     "credit_risk_dataset = pd.read_csv(\n",
     "    filepath_or_buffer = \"../data/interim/credit_risk_dataset_prepped.csv\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5c858d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_risk_dataset.duplicated()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "461a6265",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_risk_dataset[credit_risk_dataset.duplicated()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f2dda93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Credit Risk Dataset size prior to handling duplicated values:\", credit_risk_dataset.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dbe13b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_risk_dataset.drop_duplicates(\n",
+    "    keep='first',\n",
+    "    inplace=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1c6f742",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Credit Risk Dataset size post handling duplicated values:\", credit_risk_dataset.shape)"
    ]
   },
   {
@@ -1060,7 +1121,7 @@
    "id": "c30244bc",
    "metadata": {},
    "source": [
-    "#### The distributions appear to be similar, which would indicate that MAR is not at play; therefore MNAR is the probable cause for missing data."
+    "#### The distributions appear to be similar, which would indicate that MAR is not at play; therefore MNAR is the probable cause for missing data - They either didn't want to put their employment length due to it being short or they didn't want to put their interest rate due to it being too high."
    ]
   },
   {
