created dummy indicator columns for both missing variables.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -689,6 +689,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1188ccb9",
+   "metadata": {},
+   "source": [
+    "#### T-Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "43024f28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_risk_dataset['pel_missing'] = credit_risk_dataset['person_emp_length'].isnull()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c4eae303",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_risk_dataset['lir_missing'] = credit_risk_dataset['loan_int_rate'].isnull()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "243f1e00",
+   "metadata": {},
+   "source": [
+    "#### Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5c38f5a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "37495775",
    "metadata": {},
    "source": [
@@ -697,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "f244c7d3",
    "metadata": {},
    "outputs": [
@@ -968,9 +1012,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "credit_risk_dataset"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
