--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -716,6 +716,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0f96b592",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 32574 entries, 0 to 32573\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column                      Non-Null Count  Dtype  \n",
+      "---  ------                      --------------  -----  \n",
+      " 0   person_age                  32574 non-null  int64  \n",
+      " 1   person_income               32574 non-null  int64  \n",
+      " 2   person_home_ownership       32574 non-null  object \n",
+      " 3   person_emp_length           31679 non-null  float64\n",
+      " 4   loan_intent                 32574 non-null  object \n",
+      " 5   loan_grade                  32574 non-null  object \n",
+      " 6   loan_amnt                   32574 non-null  int64  \n",
+      " 7   loan_int_rate               29459 non-null  float64\n",
+      " 8   loan_status                 32574 non-null  bool   \n",
+      " 9   loan_percent_income         32574 non-null  float64\n",
+      " 10  cb_person_default_on_file   32574 non-null  bool   \n",
+      " 11  cb_person_cred_hist_length  32574 non-null  int64  \n",
+      " 12  pel_missing                 32574 non-null  bool   \n",
+      " 13  lir_missing                 32574 non-null  bool   \n",
+      "dtypes: bool(4), float64(3), int64(4), object(3)\n",
+      "memory usage: 2.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "33a0f407",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_features = credit_risk_dataset.select_dtypes(\n",
+    "    include = ['int64', 'float64']\n",
+    ").drop(labels=['person_emp_length', 'loan_int_rate'],\n",
+    "       axis=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1de31965",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc1ce07f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "243f1e00",
    "metadata": {},
