building t test for numeric observed varibales in determining MCAR status for missing values. updated environment to include scipy.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -769,16 +769,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1de31965",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dummy_indicators = credit_risk_dataset[[\"pel_missing\", \"lir_missing\"]]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "fc1ce07f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for numeric_feature in numeric_features:\n",
+    "    for dummy_indicator in dummy_indicators:\n",
+    "        observed_group = credit_risk_dataset.loc[credit_risk_dataset[dummy_indicator] == 0, numeric_feature]\n",
+    "        missing_group = credit_risk_dataset.loc[credit_risk_dataset[dummy_indicator] == 1, numeric_feature]\n",
+    "        stats."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7a99b32",
    "metadata": {},
    "outputs": [],
    "source": []
